Complete Half Login and token needs to be done
